--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
 	<dimen name="fab_margin">16dp</dimen>
 	<dimen name="detail_backdrop_height">270dp</dimen>
+	<dimen name="detail_backdrop_height1">220dp</dimen>
+	<dimen name="detail_backdrop_height2">150dp</dimen>
 </resources>
