--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -9,7 +9,7 @@
 	<android.support.design.widget.AppBarLayout
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/detail_backdrop_height1"
+		android:layout_height="@dimen/detail_backdrop_height2"
 		android:fitsSystemWindows="true"
 		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 		
@@ -19,22 +19,31 @@
 			android:layout_height="match_parent"
 			android:fitsSystemWindows="true"
 			app:contentScrim="?attr/colorPrimary"
-			app:expandedTitleGravity="center|bottom"
+			app:expandedTitleGravity="start|bottom"
 			app:expandedTitleMarginEnd="64dp"
-			app:expandedTitleMarginStart="64dp"
+			app:expandedTitleMarginStart="40dp"
 			app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
 			app:layout_scrollFlags="scroll|exitUntilCollapsed"
 		>
 			
-			<ImageView android:layout_width="match_parent"
-			           android:src="@drawable/bg_1"
-			           android:scaleType="centerCrop"
-			           android:layout_height="@dimen/detail_backdrop_height1"/>
-			
-		
+			<RelativeLayout
+				android:layout_width="match_parent"
+				android:layout_height="@dimen/detail_backdrop_height2"
+				android:background="@color/colorPrimary"
+				android:paddingRight="8dp"
+				android:paddingTop="85dp">
 				
-
-			
+				
+				<ImageView android:layout_width="wrap_content"
+				           android:clickable="true"
+				           android:focusable="true"
+				           android:id="@+id/ic_attendance"
+				           android:foreground="?android:attr/selectableItemBackground"
+				           android:src="@drawable/ic_assignment_white_36dp"
+				           android:layout_alignParentRight="true"
+				           android:scaleType="fitXY"
+				           android:layout_height="wrap_content"/>
+			</RelativeLayout>
 			
 			<android.support.v7.widget.Toolbar
 				android:id="@+id/toolbar"
@@ -51,7 +60,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior">
-		<include layout="@layout/content_activity_add_class"/>
+		<include layout="@layout/content_activity_add_student"/>
 	</android.support.v4.widget.NestedScrollView>
 	
 	
@@ -61,9 +70,9 @@
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/fab_margin"
 		android:clickable="true"
-		android:src="@drawable/ic_add_circle_white_24dp"
-		app:layout_anchor="@id/appbar"
-		app:layout_anchorGravity="bottom|right|end"/>
+		android:src="@drawable/ic_group_add_white_24dp"
+		android:layout_gravity="bottom|end"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
+
