--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="@dimen/detail_backdrop_height"
-				android:background="@color/MDASColor"
+				android:background="@color/colorPrimary"
 				android:orientation="vertical"
 				android:paddingTop="35dp">
 				
@@ -76,7 +76,7 @@
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/fab_margin"
 		android:clickable="true"
-		android:src="@drawable/ic_supervisor_account_white_48dp"
+		android:src="@drawable/ic_date_range_white_48dp"
 		app:layout_anchor="@id/appbar"
 		app:layout_anchorGravity="bottom|right|end"/>
 	
