--- a/app/src/main/res/layout/class_list_item.xml
+++ b/app/src/main/res/layout/class_list_item.xml
@@ -1,21 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:background="@color/colorAccent"
-	android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools" android:id="@+id/class_list"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:focusable="true"
+              android:orientation="vertical"
+              android:padding="4dp">
+	<android.support.v7.widget.CardView
+		xmlns:card_view="http://schemas.android.com/apk/res-auto"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:elevation="4dp"
+		android:translationZ="5dp"
+		android:clickable="true"
+		android:focusable="true"
+		android:foreground="?android:attr/selectableItemBackground"
+		android:id="@+id/class_card"
+		card_view:cardCornerRadius="2dp" tools:ignore="UnusedAttribute">
+		
+<LinearLayout android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:paddingLeft="16dp"
+android:orientation="horizontal">
 	
 	<TextView
-		android:textSize="20sp"
-		android:id="@+id/tv_className"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginBottom="8dp" android:layout_marginLeft="8dp"
-		android:layout_marginRight="8dp"
-		android:layout_marginTop="8dp" android:text="Second Year-Algebra"
-		android:textColor="@color/White" app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.502"/>
-</android.support.constraint.ConstraintLayout>
+		
+		android:id="@+id/initial"
+		android:textAllCaps="true"
+		android:layout_width="35dp"
+		android:layout_height="35dp"
+		android:layout_gravity="center"
+		android:gravity="center"
+		android:text="P"
+		android:textColor="@color/white"
+		android:textSize="16sp"
+	
+	
+	
+	/>
+		
+		<TextView
+			android:paddingLeft="8dp"
+			android:id="@+id/tv_className"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:paddingBottom="20dp"
+			android:paddingTop="20dp"
+			android:textAppearance="?attr/textAppearanceListItem"
+			android:text="Second Year-Algebra"
+			android:textStyle="bold"
+		/>
+		
+		
+</LinearLayout>
+	</android.support.v7.widget.CardView>
+	
+
+
+</LinearLayout>
