--- a/app/src/main/res/layout/content_activity_add_student.xml
+++ b/app/src/main/res/layout/content_activity_add_student.xml
@@ -1,21 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 	
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/content_main"
+	android:id="@+id/content_add_student"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	android:paddingBottom="40dp"
 	tools:context="com.yamamz.attendanceapp.MainActivity"
-	>
+	tools:showIn="@layout/activity_add_student">
+	
+	
+	
 	
 	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/recyclerView"
 	/>
+
 
 
 
