--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-	
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -7,16 +7,36 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	android:paddingBottom="40dp"
-	tools:context="com.yamamz.attendanceapp.MainActivity"
-	>
+	tools:context="com.yamamz.attendanceapp.Attendance_Activity"
+	tools:showIn="@layout/activity_attendance">
 	
 	<android.support.v7.widget.RecyclerView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
 		android:id="@+id/recyclerView"
-	/>
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+	
+	<LinearLayout android:layout_width="wrap_content"
+	              android:layout_marginTop="50dp"
+	              android:gravity="center"
+	              android:layout_centerInParent="true"
+	              android:layout_alignParentTop="true"
+	              android:orientation="vertical"
+	              android:id="@+id/empty"
+	              android:layout_height="wrap_content">
+		<ImageView android:layout_width="wrap_content"
+		           android:layout_gravity="center"
+		           android:src="@drawable/ic_format_list_bulleted_pink_a400_48dp"
+		           android:layout_height="wrap_content"/>
+		
+		<TextView android:layout_width="wrap_content"
+		          android:id="@+id/empty_textView"
+		          android:gravity="center"
+		          android:text="@string/empty_list_nplease_click_calendar_button_to_add_attendance"
+		          android:layout_height="match_parent"/>
+	
+	</LinearLayout>
 
 
 
 </RelativeLayout>
+
