--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -1,7 +1,7 @@
 <android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/main_content"
+	xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main_content"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true">
@@ -9,7 +9,7 @@
 	<android.support.design.widget.AppBarLayout
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/detail_backdrop_height2"
+		android:layout_height="@dimen/detail_backdrop_height"
 		android:fitsSystemWindows="true"
 		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 		
@@ -26,24 +26,16 @@
 			app:layout_scrollFlags="scroll|exitUntilCollapsed"
 		>
 			
-			<RelativeLayout
-				android:layout_width="match_parent"
-				android:layout_height="@dimen/detail_backdrop_height2"
-				android:background="@color/colorPrimary"
-				android:paddingRight="8dp"
-				android:paddingTop="85dp">
+		
+				
+				<ImageView android:layout_width="match_parent"
+				           android:src="@drawable/bg_1"
+				           android:scaleType="centerCrop"
+				           android:layout_height="@dimen/detail_backdrop_height"/>
 				
 				
-				<ImageView android:layout_width="wrap_content"
-				           android:clickable="true"
-				           android:focusable="true"
-				           android:id="@+id/ic_attendance"
-				           android:foreground="?android:attr/selectableItemBackground"
-				           android:src="@drawable/ic_assignment_white_36dp"
-				           android:layout_alignParentRight="true"
-				           android:scaleType="fitXY"
-				           android:layout_height="wrap_content"/>
-			</RelativeLayout>
+		
+		
 			
 			<android.support.v7.widget.Toolbar
 				android:id="@+id/toolbar"
@@ -51,8 +43,23 @@
 				android:layout_height="?attr/actionBarSize"
 				app:layout_collapseMode="pin"
 				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+			
+			<ImageView android:layout_width="wrap_content"
+			           android:clickable="true"
+			           android:focusable="true"
+			           android:elevation="6dp"
+			           android:id="@+id/ic_attendance"
+			           android:foreground="?android:attr/selectableItemBackground"
+			           android:src="@drawable/ic_date_range_white_48dp"
+			           android:layout_gravity="end|bottom"
+			           android:layout_marginRight="@dimen/fab_margin"
+			           android:layout_marginBottom="8dp"
+			           android:scaleType="fitXY"
+			           android:layout_height="wrap_content" tools:targetApi="lollipop"/>
 		
 		</android.support.design.widget.CollapsingToolbarLayout>
+		
+
 	
 	</android.support.design.widget.AppBarLayout>
 	
