--- a/app/src/main/res/layout/content_activity_add_class.xml
+++ b/app/src/main/res/layout/content_activity_add_class.xml
@@ -14,10 +14,31 @@
 	
 	
 	<android.support.v7.widget.RecyclerView
+		
 		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+	    
 />
+	<LinearLayout android:layout_width="wrap_content"
+	              android:layout_marginTop="250dp"
+	              android:layout_centerInParent="true"
+	              android:orientation="vertical"
+	              android:id="@+id/emptyView"
+	              android:layout_height="wrap_content">
+		<ImageView android:layout_width="wrap_content"
+		           android:layout_gravity="center"
+		           android:src="@drawable/ic_format_list_bulleted_pink_a400_48dp"
+		           android:layout_height="wrap_content"/>
+		
+		<TextView android:layout_width="wrap_content"
+		          android:id="@+id/empty_textView"
+		          android:gravity="center"
+		          android:text="Empty List\nPlease click  Plus Button to add"
+		          android:layout_height="match_parent"/>
+		
+	</LinearLayout>
+	
 
 
 </RelativeLayout>
