--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#D500F9</color>
-	<color name="colorPrimaryDark">#8E24AA</color>
+	<color name="colorPrimary">#8E24AA</color>
+	<color name="colorPrimaryDark">#5E35B1</color>
 	<color name="colorPrimary1">#00E676</color>
 	<color name="colorPrimaryDark1">#2c3e50</color>
 	<color name="black">#000000</color>
